- A frame has been added for the addTask button - A second logo has been added - A timer icon has been added _____ in the tasks_row : - Icons have been resized _____ in the Strings : - The login button text has changed - The text of the Total Time message has changed. _____ in the activity_add_task : - All the design has been changed and the Id's are kept the same - Added back button to move to the main page "optional" _____ in the activity_main : - Changed side message text for the Signup and change its font size - Login text changed to Sign in _____ in the activity_sign_up page : - A message has been added with a button in case the user has an account already “optional” _____ in the activity_tasks : - All the design has been changed and the id's are kept the same

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,10 +9,10 @@
     <string name="password_hint">Password</string>
     <string name="email_hint">Email</string>
     <string name="confPassword_hint">Confirm Password</string>
-    <string name="loginBtn">Login</string>
+    <string name="loginBtn">Sign in</string>
     <string name="signupBtn">Sign up</string>
     <string name="guestBtn">register as a guest</string>
-    <string name="totalTimeText">Total Time</string>
+    <string name="totalTimeText">Total Time Its :</string>
     <string name="taskTitle">Title</string>
     <string name="taskTitle_hint">Write your task title here</string>
     <string name="taskDetail">Detail</string>
