--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,12 @@
 
 <resources>
 
-
-
-    <string name="app_name">TaskTimerTest</string>
-    <string name="group">Kotlin Knights</string>
-    <string name="username_hint">Username</string>
-    <string name="password_hint">Password</string>
-    <string name="email_hint">Email</string>
-    <string name="confPassword_hint">Confirm Password</string>
+    <string name="app_name" translatable="false">TaskTimer</string>
+    <string name="group" translatable="false">Kotlin Knights</string>
+    <string name="username_hint" translatable="false">Username</string>
+    <string name="password_hint" translatable="false">Password</string>
+    <string name="email_hint" translatable="false">Email</string>
+    <string name="confPassword_hint" translatable="false">Confirm Password</string>
     <string name="loginBtn">Sign in</string>
     <string name="signupBtn">Sign up</string>
     <string name="guestBtn">register as a guest</string>
@@ -18,6 +16,5 @@
     <string name="taskDetail">Detail</string>
     <string name="taskDetail_hint">Write your details here</string>
     <string name="addTaskBtn">Add Task</string>
-
 
 </resources>
