in the activity_main : - The login button text color has changed _____  in the activity_add_task : - The problem of entering the button on the EditText has been fixed and the font color has been changed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="loginBtn">Sign in</string>
     <string name="signupBtn">Sign up</string>
     <string name="guestBtn">register as a guest</string>
-    <string name="totalTimeText">Total Time Its :</string>
+    <string name="totalTimeText">Total Time :</string>
     <string name="taskTitle">Title</string>
     <string name="taskTitle_hint">Write your task title here</string>
     <string name="taskDetail">Detail</string>
