--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,18 @@
     <string name="taskDetail">Detail</string>
     <string name="taskDetail_hint">Write your details here</string>
     <string name="addTaskBtn">Add Task</string>
+    <string name="defualtTimer">00:00:00</string>
+    <string name="addUserS">User Added Successfully</string>
+    <string name="addTaskS">The task added successfully</string>
+    <string name="Signin">Sign in</string>
+    <string name="member">Not a member?</string>
+    <string name="NewTask">New Task</string>
+    <string name="loginWrnning">Please enter a correct password and user name</string>
+    <string name="fillWarnning">please fill all field</string>
+    <string name="emailCon">"The email must follow the pattern example@organization.extention"</string>
+    <string name="deleteConf">Are you  sure you want to delete this task?</string>
+    <string name="deleted">The task deleted successfully</string>
+    <string name="delete">Delete</string>
+    <string name="cancel">Cancel</string>
 
 </resources>
